<resources>
    <string name="app_name">DrCarango</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="_123456">123456</string>
    <string name="a_a_com">a@a.com</string>
    <string name="title_activity_navigation_perfil_usuario">NavigationPerfilUsuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_perfil_usuario_drawer">perfil_usuario_drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="cadastrar">cadastrar</string>
</resources>
